--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,25 @@
 development.db
 production.db
+
+# ruby ignores
+
+*.gem
+*.rbc
+.bundle
+.config
+coverage
+InstalledFiles
+lib/bundler/man
+pkg
+rdoc
+spec/reports
+test/tmp
+test/version_tmp
+tmp
+
+# YARD artifacts
+.yardoc
+_yardoc
+doc/
+
+
